--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ flask-sqlalchemy = "3.0.3"
 Werkzeug = "2.2.2"
 sqlalchemy-serializer = "1.4.1"
 faker = "15.3.2"
-flask-migrate = "4.0.0"
+flask-migrate = "*"
 flask-restful = "0.3.9"
 importlib-metadata = "6.0.0"
 importlib-resources = "5.10.0"
